--- a/blog-style.css
+++ b/blog-style.css
@@ -55,10 +55,10 @@ a {
     margin:20px;
     overflow: scroll;
     white-space: pre;
-    /*background: #f8f8f8;*/
-    background: #384047;
-    /*color:#888;*/
-    color:#fff;
+    background: #f8f8f8;
+    /*background: #384047;*/
+    color:#888;
+    /*color:#fff;*/
     font-size: 13px;
     line-height: 2;
     border-left:3px solid #3f87a6;
